# dio-python-twitter-py

./: README.md  app.conf  main.py  pyproject.toml
src/: ConfigurationLoader.py  connection.py  services.py
